AC_PREREQ(2.60)
AC_INIT([gtkhelloworld], [0.1])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.9.6 -Wall -Werror dist-bzip2])

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_INTLTOOL 
ALL_LINGUAS="zh_CN" 
GETTEXT_PACKAGE="$PACKAGE" 
AC_SUBST(GETTEXT_PACKAGE) 
AM_GLIB_GNU_GETTEXT 
AM_GLIB_DEFINE_LOCALEDIR(LOCALEDIR) 
AM_PATH_GTK_2_0

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
	Makefile
	tests/Makefile
	po/Makefile.in
])
AC_OUTPUT

