AC_INIT([md5test],[1.0],[njit8021xclient@googlegroups.com],[],[https://github.com/liuqun/njit8021xclient])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_MKDIR_P
AC_PROG_INSTALL
AC_PROG_CC
PKG_CHECK_MODULES([libcrypto], [libcrypto])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([
	Makefile
])
AC_OUTPUT

